2001-09-27  Alex Samuel  <samuel@codesourcery.com>

	* qm/track/issue_class.py (IssueClass.__init__): Adjust field
	descriptions. 
	* qm/track/cmdline.py (Command.GetIdbPath): Fix exception.
	(run_command): Handle IdbError.
	* qm/track/qmtrack.in: Load diagnostics.
	* qm/track/server.py: Remove obsolete import.
	* qm/track/web/query.py: Likewise.
	* qm/test/classes/command.py (ExecTest.fields): Fix description of
	exit_code field. 
	* share/dtml/track/show.dtml: Show brief field descriptions when
	editing. 
	* share/dtml/test/show.dtml: Fix indentation.
	* share/diagnostics/track.txt (idb locked): Adjust.

2001-09-27  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/classes/command.py (ExecTest.Run): Open input files for
	read. 

2001-09-27  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/base.py (Database.GetTestClasses): New method.
	* qm/test/web/show.py (NewItemPage.__init__): Use it, instead
	of qm.test.base.standard_test_class_names.
	* share/dtml/test/new.dtml: Remove test class text field.
	* share/dtml/test/show.dtml: Only show explanatory text about
	properties when editing.
	
	* qm/fields.py (Field.GetDescription): Update docstring.
	(Field.GetBriefDescription): New method.
	* qm/structured_text.py (StructuredTextProcessor.__call__): Use
	get_paragraphs.
	(get_paragraphs): New function.
	(get_first_paragraph): Likewise.
	(__paragraph_regexp): New variable.
	* qm/test/web/show.py (ShowPage.GetBriefClassDescription): New
	method.
	* share/dtml/test/new.dtml: Correct typo.
	* share/dtml/test/show.dtml: Reduce verbosity; reoder some 
	comments.
	
	* qm/test/classes/command.py (ExecTest): Revise doc strings.
	(ShellCommandTest): Likewise.
	(ShellScriptTest): Likewise.
	* qm/test/classes/file.py (SubstitutionField): Likewise.
	(FileContentsTest): Likewise.
	* qm/test/classes/python.py (ExecTest): Likewise.
	(ExceptionTest): Likewise.
	(StringExceptionTest): Likewise.

2001-09-27  Alex Samuel  <samuel@codesourcery.com>
	